--- a/saveMoney.html
+++ b/saveMoney.html
@@ -156,5 +156,7 @@
     <script src="moneyLog.js"></script>
     <script src="calculator.js"></script>
     <script src="bg.js"></script>
+    <script src="date.js"></script>
+    <script src="monthly.js"></script>
 </body>
 </html>
