--- a/saveMoney.html
+++ b/saveMoney.html
@@ -158,5 +158,6 @@
     <script src="bg.js"></script>
     <script src="date.js"></script>
     <script src="monthly.js"></script>
+    <script src="getTotal.js"></script>
 </body>
 </html>
